# ginserver/ginserver.gen.go
@@ -26,6 +26,7 @@ const (
 	INTERNALERROR        ApplicationErrorType = "INTERNAL_ERROR"
 	NOTFOUND             ApplicationErrorType = "NOT_FOUND"
 	ORGANIZATIONNOTFOUND ApplicationErrorType = "ORGANIZATION_NOT_FOUND"
+	PERMISSIONDENIED     ApplicationErrorType = "PERMISSION_DENIED"
 	VALIDATIONERROR      ApplicationErrorType = "VALIDATION_ERROR"
 )
 
@@ -1138,6 +1139,9 @@ type WatcherSummary struct {
 
 // OrganizationNotFound Standard error response body.
 type OrganizationNotFound = ApplicationError
+
+// PermissionDenied Standard error response body.
+type PermissionDenied = ApplicationError
 
 // ListChannelsParams defines parameters for ListChannels.
 type ListChannelsParams struct {
@@ -3175,6 +3179,8 @@ func RegisterHandlersWithOptions(router gin.IRouter, si ServerInterface, options
 
 type OrganizationNotFoundJSONResponse ApplicationError
 
+type PermissionDeniedJSONResponse ApplicationError
+
 type ListChannelsRequestObject struct {
 	Params ListChannelsParams
 }
@@ -3199,6 +3205,15 @@ type ListChannels401JSONResponse struct {
 func (response ListChannels401JSONResponse) VisitListChannelsResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(401)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type ListChannels403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response ListChannels403JSONResponse) VisitListChannelsResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
 
 	return json.NewEncoder(w).Encode(response)
 }
@@ -3249,6 +3264,15 @@ func (response CreateChannel401JSONResponse) VisitCreateChannelResponse(w http.R
 	return json.NewEncoder(w).Encode(response)
 }
 
+type CreateChannel403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response CreateChannel403JSONResponse) VisitCreateChannelResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 type CreateChannel500JSONResponse ApplicationError
 
 func (response CreateChannel500JSONResponse) VisitCreateChannelResponse(w http.ResponseWriter) error {
@@ -3282,6 +3306,15 @@ type GetChannel401JSONResponse struct {
 func (response GetChannel401JSONResponse) VisitGetChannelResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(401)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type GetChannel403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response GetChannel403JSONResponse) VisitGetChannelResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
 
 	return json.NewEncoder(w).Encode(response)
 }
@@ -3342,6 +3375,15 @@ func (response UpdateChannel401JSONResponse) VisitUpdateChannelResponse(w http.R
 	return json.NewEncoder(w).Encode(response)
 }
 
+type UpdateChannel403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response UpdateChannel403JSONResponse) VisitUpdateChannelResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 type UpdateChannel404JSONResponse ApplicationError
 
 func (response UpdateChannel404JSONResponse) VisitUpdateChannelResponse(w http.ResponseWriter) error {
@@ -3394,6 +3436,15 @@ type ListChannelEvents401JSONResponse struct {
 func (response ListChannelEvents401JSONResponse) VisitListChannelEventsResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(401)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type ListChannelEvents403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response ListChannelEvents403JSONResponse) VisitListChannelEventsResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
 
 	return json.NewEncoder(w).Encode(response)
 }
@@ -3454,6 +3505,15 @@ func (response SearchChannelEvents401JSONResponse) VisitSearchChannelEventsRespo
 	return json.NewEncoder(w).Encode(response)
 }
 
+type SearchChannelEvents403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response SearchChannelEvents403JSONResponse) VisitSearchChannelEventsResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 type SearchChannelEvents404JSONResponse ApplicationError
 
 func (response SearchChannelEvents404JSONResponse) VisitSearchChannelEventsResponse(w http.ResponseWriter) error {
@@ -3501,6 +3561,15 @@ func (response GetChannelEvent401JSONResponse) VisitGetChannelEventResponse(w ht
 	return json.NewEncoder(w).Encode(response)
 }
 
+type GetChannelEvent403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response GetChannelEvent403JSONResponse) VisitGetChannelEventResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 type GetChannelEvent404JSONResponse ApplicationError
 
 func (response GetChannelEvent404JSONResponse) VisitGetChannelEventResponse(w http.ResponseWriter) error {
@@ -3544,6 +3613,15 @@ type ListOperations401JSONResponse struct {
 func (response ListOperations401JSONResponse) VisitListOperationsResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(401)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type ListOperations403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response ListOperations403JSONResponse) VisitListOperationsResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
 
 	return json.NewEncoder(w).Encode(response)
 }
@@ -3604,6 +3682,15 @@ func (response CreateOperation401JSONResponse) VisitCreateOperationResponse(w ht
 	return json.NewEncoder(w).Encode(response)
 }
 
+type CreateOperation403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response CreateOperation403JSONResponse) VisitCreateOperationResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 type CreateOperation404JSONResponse ApplicationError
 
 func (response CreateOperation404JSONResponse) VisitCreateOperationResponse(w http.ResponseWriter) error {
@@ -3647,6 +3734,15 @@ type GetOperation401JSONResponse struct {
 func (response GetOperation401JSONResponse) VisitGetOperationResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(401)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type GetOperation403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response GetOperation403JSONResponse) VisitGetOperationResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
 
 	return json.NewEncoder(w).Encode(response)
 }
@@ -3708,6 +3804,15 @@ func (response FinalizeOrCancelOperation401JSONResponse) VisitFinalizeOrCancelOp
 	return json.NewEncoder(w).Encode(response)
 }
 
+type FinalizeOrCancelOperation403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response FinalizeOrCancelOperation403JSONResponse) VisitFinalizeOrCancelOperationResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 type FinalizeOrCancelOperation404JSONResponse ApplicationError
 
 func (response FinalizeOrCancelOperation404JSONResponse) VisitFinalizeOrCancelOperationResponse(w http.ResponseWriter) error {
@@ -3751,6 +3856,15 @@ type ListQueries401JSONResponse struct {
 func (response ListQueries401JSONResponse) VisitListQueriesResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(401)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type ListQueries403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response ListQueries403JSONResponse) VisitListQueriesResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
 
 	return json.NewEncoder(w).Encode(response)
 }
@@ -3807,6 +3921,15 @@ type CreateQuery401JSONResponse struct {
 func (response CreateQuery401JSONResponse) VisitCreateQueryResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(401)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type CreateQuery403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response CreateQuery403JSONResponse) VisitCreateQueryResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
 
 	return json.NewEncoder(w).Encode(response)
 }
@@ -3876,6 +3999,15 @@ func (response GetQuery401JSONResponse) VisitGetQueryResponse(w http.ResponseWri
 	return json.NewEncoder(w).Encode(response)
 }
 
+type GetQuery403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response GetQuery403JSONResponse) VisitGetQueryResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 type GetQuery404JSONResponse ApplicationError
 
 func (response GetQuery404JSONResponse) VisitGetQueryResponse(w http.ResponseWriter) error {
@@ -3919,6 +4051,15 @@ type ListWatchers401JSONResponse struct {
 func (response ListWatchers401JSONResponse) VisitListWatchersResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(401)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type ListWatchers403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response ListWatchers403JSONResponse) VisitListWatchersResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
 
 	return json.NewEncoder(w).Encode(response)
 }
@@ -3979,6 +4120,15 @@ func (response CreateWatcher401JSONResponse) VisitCreateWatcherResponse(w http.R
 	return json.NewEncoder(w).Encode(response)
 }
 
+type CreateWatcher403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response CreateWatcher403JSONResponse) VisitCreateWatcherResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 type CreateWatcher404JSONResponse ApplicationError
 
 func (response CreateWatcher404JSONResponse) VisitCreateWatcherResponse(w http.ResponseWriter) error {
@@ -4022,6 +4172,15 @@ type GetWatcher401JSONResponse struct {
 func (response GetWatcher401JSONResponse) VisitGetWatcherResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(401)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type GetWatcher403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response GetWatcher403JSONResponse) VisitGetWatcherResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
 
 	return json.NewEncoder(w).Encode(response)
 }
@@ -4092,6 +4251,15 @@ func (response UpdateWatcher401JSONResponse) VisitUpdateWatcherResponse(w http.R
 	return json.NewEncoder(w).Encode(response)
 }
 
+type UpdateWatcher403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response UpdateWatcher403JSONResponse) VisitUpdateWatcherResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 type UpdateWatcher404JSONResponse ApplicationError
 
 func (response UpdateWatcher404JSONResponse) VisitUpdateWatcherResponse(w http.ResponseWriter) error {
@@ -4153,6 +4321,15 @@ func (response ListNetworks401JSONResponse) VisitListNetworksResponse(w http.Res
 	return json.NewEncoder(w).Encode(response)
 }
 
+type ListNetworks403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response ListNetworks403JSONResponse) VisitListNetworksResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 type ListNetworks500JSONResponse ApplicationError
 
 func (response ListNetworks500JSONResponse) VisitListNetworksResponse(w http.ResponseWriter) error {
@@ -4186,6 +4363,15 @@ type ListWallets401JSONResponse struct {
 func (response ListWallets401JSONResponse) VisitListWalletsResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(401)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type ListWallets403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response ListWallets403JSONResponse) VisitListWalletsResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
 
 	return json.NewEncoder(w).Encode(response)
 }
@@ -4236,6 +4422,15 @@ func (response CreateWallet401JSONResponse) VisitCreateWalletResponse(w http.Res
 	return json.NewEncoder(w).Encode(response)
 }
 
+type CreateWallet403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response CreateWallet403JSONResponse) VisitCreateWalletResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 type CreateWallet500JSONResponse ApplicationError
 
 func (response CreateWallet500JSONResponse) VisitCreateWalletResponse(w http.ResponseWriter) error {
@@ -4269,6 +4464,15 @@ type GetWallet401JSONResponse struct {
 func (response GetWallet401JSONResponse) VisitGetWalletResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(401)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type GetWallet403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response GetWallet403JSONResponse) VisitGetWalletResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
 
 	return json.NewEncoder(w).Encode(response)
 }
@@ -4325,6 +4529,15 @@ type UpdateWallet401JSONResponse struct {
 func (response UpdateWallet401JSONResponse) VisitUpdateWalletResponse(w http.ResponseWriter) error {
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(401)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type UpdateWallet403JSONResponse struct{ PermissionDeniedJSONResponse }
+
+func (response UpdateWallet403JSONResponse) VisitUpdateWalletResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(403)
 
 	return json.NewEncoder(w).Encode(response)
 }
